samples/_failures_safe/1761688490_e08f69_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c9ac8853.c: In function ‘tokenize’:
./samples/SAFE/__tmp_c9ac8853.c:163:9: error: ‘skip_whites’ undeclared (first use in this function); did you mean ‘skip_whitespace’?
  163 |         skip_whites
      |         ^~~~~~~~~~~
      |         skip_whitespace
./samples/SAFE/__tmp_c9ac8853.c:163:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_c9ac8853.c:163:20: error: expected ‘;’ at end of input
  163 |         skip_whites
      |                    ^
      |                    ;
./samples/SAFE/__tmp_c9ac8853.c:163:9: error: expected declaration or statement at end of input
  163 |         skip_whites
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_c9ac8853.c:163:9: error: expected declaration or statement at end of input
